resolved index issue with last week ranking

--- a/templates/defenders.html
+++ b/templates/defenders.html
@@ -10,6 +10,7 @@
       <th>now_cost</th>
       <th>total_rank</th>
       <th>form</th>
+      <th>last_week_rank</th>
     </tr>
   </thead>
   <tbody>
@@ -19,10 +20,11 @@
       <td>Leeds</td>
       <td>Defender</td>
       <td>22.600000</td>
-      <td>108.250946</td>
+      <td>108.316350</td>
       <td>5.0</td>
       <td>1.0</td>
       <td>5.0</td>
+      <td>1.0</td>
     </tr>
     <tr>
       <th>619</th>
@@ -30,10 +32,11 @@
       <td>West Ham</td>
       <td>Defender</td>
       <td>20.862069</td>
-      <td>116.571753</td>
+      <td>115.017799</td>
       <td>5.8</td>
       <td>2.0</td>
       <td>4.8</td>
+      <td>2.0</td>
     </tr>
     <tr>
       <th>48</th>
@@ -41,10 +44,11 @@
       <td>Aston Villa</td>
       <td>Defender</td>
       <td>22.400000</td>
-      <td>107.957415</td>
+      <td>106.613490</td>
       <td>5.0</td>
       <td>3.0</td>
       <td>4.5</td>
+      <td>3.0</td>
     </tr>
     <tr>
       <th>47</th>
@@ -52,21 +56,35 @@
       <td>Aston Villa</td>
       <td>Defender</td>
       <td>19.814815</td>
-      <td>106.007740</td>
+      <td>106.447972</td>
       <td>5.4</td>
       <td>4.0</td>
       <td>4.8</td>
+      <td>4.0</td>
     </tr>
     <tr>
       <th>397</th>
       <td>Dias</td>
       <td>Man City</td>
       <td>Defender</td>
-      <td>19.508197</td>
-      <td>118.320876</td>
+      <td>19.672131</td>
+      <td>121.433086</td>
       <td>6.1</td>
       <td>5.0</td>
-      <td>2.8</td>
+      <td>2.9</td>
+      <td>5.0</td>
+    </tr>
+    <tr>
+      <th>427</th>
+      <td>Wan-Bissaka</td>
+      <td>Man Utd</td>
+      <td>Defender</td>
+      <td>19.642857</td>
+      <td>111.224732</td>
+      <td>5.6</td>
+      <td>6.0</td>
+      <td>3.5</td>
+      <td>7.0</td>
     </tr>
     <tr>
       <th>52</th>
@@ -74,21 +92,11 @@
       <td>Aston Villa</td>
       <td>Defender</td>
       <td>21.086957</td>
-      <td>89.993864</td>
+      <td>90.501389</td>
       <td>4.6</td>
-      <td>6.0</td>
-      <td>4.5</td>
-    </tr>
-    <tr>
-      <th>427</th>
-      <td>Wan-Bissaka</td>
-      <td>Man Utd</td>
-      <td>Defender</td>
-      <td>19.464286</td>
-      <td>111.031936</td>
-      <td>5.6</td>
       <td>7.0</td>
-      <td>3.3</td>
+      <td>4.5</td>
+      <td>6.0</td>
     </tr>
     <tr>
       <th>350</th>
@@ -96,10 +104,35 @@
       <td>Liverpool</td>
       <td>Defender</td>
       <td>14.861111</td>
-      <td>141.084371</td>
+      <td>139.867853</td>
       <td>7.2</td>
       <td>8.0</td>
       <td>2.2</td>
+      <td>8.0</td>
+    </tr>
+    <tr>
+      <th>413</th>
+      <td>Maguire</td>
+      <td>Man Utd</td>
+      <td>Defender</td>
+      <td>18.363636</td>
+      <td>103.715977</td>
+      <td>5.5</td>
+      <td>9.0</td>
+      <td>3.7</td>
+      <td>10.0</td>
+    </tr>
+    <tr>
+      <th>377</th>
+      <td>Stones</td>
+      <td>Man City</td>
+      <td>Defender</td>
+      <td>20.377358</td>
+      <td>99.205941</td>
+      <td>5.3</td>
+      <td>10.0</td>
+      <td>3.1</td>
+      <td>13.0</td>
     </tr>
     <tr>
       <th>265</th>
@@ -107,21 +140,11 @@
       <td>Fulham</td>
       <td>Defender</td>
       <td>20.000000</td>
-      <td>76.833563</td>
+      <td>76.054949</td>
       <td>4.5</td>
-      <td>9.0</td>
+      <td>11.0</td>
       <td>5.3</td>
-    </tr>
-    <tr>
-      <th>413</th>
-      <td>Maguire</td>
-      <td>Man Utd</td>
-      <td>Defender</td>
-      <td>18.181818</td>
-      <td>104.928344</td>
-      <td>5.5</td>
-      <td>10.0</td>
-      <td>3.5</td>
+      <td>9.0</td>
     </tr>
     <tr>
       <th>267</th>
@@ -129,10 +152,11 @@
       <td>Fulham</td>
       <td>Defender</td>
       <td>19.111111</td>
-      <td>82.413723</td>
+      <td>82.081009</td>
       <td>4.5</td>
-      <td>11.0</td>
+      <td>12.0</td>
       <td>5.0</td>
+      <td>11.0</td>
     </tr>
     <tr>
       <th>207</th>
@@ -140,21 +164,11 @@
       <td>Everton</td>
       <td>Defender</td>
       <td>18.823529</td>
-      <td>92.251044</td>
+      <td>93.862138</td>
       <td>5.1</td>
-      <td>12.0</td>
-      <td>4.0</td>
-    </tr>
-    <tr>
-      <th>377</th>
-      <td>Stones</td>
-      <td>Man City</td>
-      <td>Defender</td>
-      <td>20.188679</td>
-      <td>95.673681</td>
-      <td>5.3</td>
       <td>13.0</td>
-      <td>3.0</td>
+      <td>4.0</td>
+      <td>12.0</td>
     </tr>
     <tr>
       <th>649</th>
@@ -162,10 +176,11 @@
       <td>Wolves</td>
       <td>Defender</td>
       <td>17.291667</td>
-      <td>82.171781</td>
+      <td>82.862355</td>
       <td>4.8</td>
       <td>14.0</td>
       <td>5.3</td>
+      <td>14.0</td>
     </tr>
     <tr>
       <th>266</th>
@@ -173,32 +188,35 @@
       <td>Fulham</td>
       <td>Defender</td>
       <td>17.333333</td>
-      <td>75.638861</td>
+      <td>75.658651</td>
       <td>4.5</td>
       <td>15.0</td>
       <td>5.7</td>
+      <td>15.0</td>
     </tr>
     <tr>
       <th>381</th>
       <td>Cancelo</td>
       <td>Man City</td>
       <td>Defender</td>
-      <td>17.580645</td>
-      <td>109.992197</td>
+      <td>17.741935</td>
+      <td>112.378139</td>
       <td>6.2</td>
       <td>16.0</td>
-      <td>2.1</td>
+      <td>2.2</td>
+      <td>16.0</td>
     </tr>
     <tr>
       <th>415</th>
       <td>Shaw</td>
       <td>Man Utd</td>
       <td>Defender</td>
-      <td>16.666667</td>
-      <td>84.893613</td>
+      <td>16.862745</td>
+      <td>87.172418</td>
       <td>5.1</td>
       <td>17.0</td>
-      <td>4.2</td>
+      <td>4.3</td>
+      <td>17.0</td>
     </tr>
     <tr>
       <th>75</th>
@@ -206,21 +224,11 @@
       <td>Brighton</td>
       <td>Defender</td>
       <td>17.346939</td>
-      <td>83.074772</td>
+      <td>84.477424</td>
       <td>4.9</td>
       <td>18.0</td>
       <td>4.0</td>
-    </tr>
-    <tr>
-      <th>120</th>
-      <td>Lowton</td>
-      <td>Burnley</td>
-      <td>Defender</td>
-      <td>18.000000</td>
-      <td>73.780899</td>
-      <td>4.5</td>
-      <td>19.0</td>
-      <td>4.1</td>
+      <td>18.0</td>
     </tr>
     <tr>
       <th>292</th>
@@ -228,10 +236,23 @@
       <td>Leicester</td>
       <td>Defender</td>
       <td>20.612245</td>
-      <td>87.163730</td>
+      <td>89.926794</td>
       <td>4.9</td>
-      <td>20.0</td>
+      <td>19.0</td>
       <td>1.5</td>
+      <td>20.0</td>
+    </tr>
+    <tr>
+      <th>120</th>
+      <td>Lowton</td>
+      <td>Burnley</td>
+      <td>Defender</td>
+      <td>18.000000</td>
+      <td>72.565644</td>
+      <td>4.5</td>
+      <td>20.0</td>
+      <td>4.1</td>
+      <td>19.0</td>
     </tr>
   </tbody>
 </table>
