--- a/templates/forwards.html
+++ b/templates/forwards.html
@@ -10,41 +10,33 @@
       <th>now_cost</th>
       <th>total_rank</th>
       <th>form</th>
+      <th>last_week_rank</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th>312</th>
-      <td>Bamford</td>
-      <td>Leeds</td>
-      <td>Forward</td>
-      <td>20.882353</td>
-      <td>134.693977</td>
-      <td>6.8</td>
-      <td>1.0</td>
-      <td>3.0</td>
-    </tr>
     <tr>
       <th>548</th>
       <td>Kane</td>
       <td>Spurs</td>
       <td>Forward</td>
       <td>14.553571</td>
-      <td>178.982743</td>
+      <td>182.491767</td>
       <td>11.2</td>
-      <td>2.0</td>
+      <td>1.0</td>
       <td>3.3</td>
+      <td>2.0</td>
     </tr>
     <tr>
-      <th>61</th>
-      <td>Watkins</td>
-      <td>Aston Villa</td>
+      <th>312</th>
+      <td>Bamford</td>
+      <td>Leeds</td>
       <td>Forward</td>
-      <td>17.121212</td>
-      <td>113.679589</td>
-      <td>6.6</td>
+      <td>20.882353</td>
+      <td>133.514575</td>
+      <td>6.8</td>
+      <td>2.0</td>
       <td>3.0</td>
-      <td>3.7</td>
+      <td>1.0</td>
     </tr>
     <tr>
       <th>278</th>
@@ -52,9 +44,22 @@
       <td>Leicester</td>
       <td>Forward</td>
       <td>13.137255</td>
-      <td>155.906775</td>
+      <td>164.703766</td>
       <td>10.2</td>
+      <td>3.0</td>
+      <td>3.0</td>
       <td>4.0</td>
+    </tr>
+    <tr>
+      <th>61</th>
+      <td>Watkins</td>
+      <td>Aston Villa</td>
+      <td>Forward</td>
+      <td>17.121212</td>
+      <td>113.677852</td>
+      <td>6.6</td>
+      <td>4.0</td>
+      <td>3.7</td>
       <td>3.0</td>
     </tr>
     <tr>
@@ -63,10 +68,11 @@
       <td>Everton</td>
       <td>Forward</td>
       <td>16.410256</td>
-      <td>126.441038</td>
+      <td>129.019837</td>
       <td>7.8</td>
       <td>5.0</td>
       <td>2.9</td>
+      <td>5.0</td>
     </tr>
     <tr>
       <th>217</th>
@@ -74,32 +80,11 @@
       <td>Everton</td>
       <td>Forward</td>
       <td>11.392405</td>
-      <td>93.723910</td>
+      <td>93.262327</td>
       <td>7.9</td>
       <td>6.0</td>
       <td>4.9</td>
-    </tr>
-    <tr>
-      <th>344</th>
-      <td>Firmino</td>
-      <td>Liverpool</td>
-      <td>Forward</td>
-      <td>11.086957</td>
-      <td>124.913774</td>
-      <td>9.2</td>
-      <td>7.0</td>
-      <td>2.7</td>
-    </tr>
-    <tr>
-      <th>153</th>
-      <td>Werner</td>
-      <td>Chelsea</td>
-      <td>Forward</td>
-      <td>10.652174</td>
-      <td>112.577532</td>
-      <td>9.2</td>
-      <td>8.0</td>
-      <td>3.5</td>
+      <td>6.0</td>
     </tr>
     <tr>
       <th>524</th>
@@ -107,10 +92,35 @@
       <td>Southampton</td>
       <td>Forward</td>
       <td>16.206897</td>
-      <td>87.426220</td>
+      <td>88.856672</td>
       <td>5.8</td>
-      <td>9.0</td>
+      <td>7.0</td>
       <td>2.4</td>
+      <td>9.0</td>
+    </tr>
+    <tr>
+      <th>344</th>
+      <td>Firmino</td>
+      <td>Liverpool</td>
+      <td>Forward</td>
+      <td>11.086957</td>
+      <td>123.201383</td>
+      <td>9.2</td>
+      <td>8.0</td>
+      <td>2.7</td>
+      <td>7.0</td>
+    </tr>
+    <tr>
+      <th>153</th>
+      <td>Werner</td>
+      <td>Chelsea</td>
+      <td>Forward</td>
+      <td>10.652174</td>
+      <td>108.502839</td>
+      <td>9.2</td>
+      <td>9.0</td>
+      <td>3.5</td>
+      <td>8.0</td>
     </tr>
     <tr>
       <th>470</th>
@@ -118,21 +128,11 @@
       <td>Newcastle</td>
       <td>Forward</td>
       <td>17.846154</td>
-      <td>105.732454</td>
+      <td>107.110915</td>
       <td>6.5</td>
       <td>10.0</td>
       <td>0.2</td>
-    </tr>
-    <tr>
-      <th>81</th>
-      <td>Maupay</td>
-      <td>Brighton</td>
-      <td>Forward</td>
-      <td>14.262295</td>
-      <td>83.313090</td>
-      <td>6.1</td>
-      <td>11.0</td>
-      <td>2.6</td>
+      <td>10.0</td>
     </tr>
     <tr>
       <th>514</th>
@@ -140,21 +140,23 @@
       <td>Southampton</td>
       <td>Forward</td>
       <td>11.309524</td>
-      <td>108.653933</td>
+      <td>110.572382</td>
       <td>8.4</td>
-      <td>12.0</td>
+      <td>11.0</td>
       <td>2.3</td>
+      <td>12.0</td>
     </tr>
     <tr>
-      <th>5</th>
-      <td>Lacazette</td>
-      <td>Arsenal</td>
+      <th>81</th>
+      <td>Maupay</td>
+      <td>Brighton</td>
       <td>Forward</td>
-      <td>11.111111</td>
-      <td>94.857111</td>
-      <td>8.1</td>
-      <td>13.0</td>
-      <td>2.2</td>
+      <td>14.262295</td>
+      <td>79.750350</td>
+      <td>6.1</td>
+      <td>12.0</td>
+      <td>2.6</td>
+      <td>11.0</td>
     </tr>
     <tr>
       <th>621</th>
@@ -162,21 +164,35 @@
       <td>West Ham</td>
       <td>Forward</td>
       <td>11.818182</td>
-      <td>75.204118</td>
+      <td>75.839380</td>
       <td>6.6</td>
-      <td>14.0</td>
+      <td>13.0</td>
       <td>3.0</td>
+      <td>14.0</td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td>Lacazette</td>
+      <td>Arsenal</td>
+      <td>Forward</td>
+      <td>11.111111</td>
+      <td>94.353666</td>
+      <td>8.1</td>
+      <td>14.0</td>
+      <td>2.2</td>
+      <td>13.0</td>
     </tr>
     <tr>
       <th>386</th>
       <td>Jesus</td>
       <td>Man City</td>
       <td>Forward</td>
-      <td>8.695652</td>
-      <td>94.487310</td>
+      <td>8.804348</td>
+      <td>91.326068</td>
       <td>9.2</td>
       <td>15.0</td>
-      <td>3.2</td>
+      <td>3.4</td>
+      <td>15.0</td>
     </tr>
     <tr>
       <th>477</th>
@@ -184,10 +200,11 @@
       <td>Sheffield Utd</td>
       <td>Forward</td>
       <td>13.461538</td>
-      <td>67.349374</td>
+      <td>66.639312</td>
       <td>5.2</td>
       <td>16.0</td>
       <td>1.7</td>
+      <td>16.0</td>
     </tr>
     <tr>
       <th>119</th>
@@ -195,10 +212,11 @@
       <td>Burnley</td>
       <td>Forward</td>
       <td>12.096774</td>
-      <td>75.777064</td>
+      <td>76.086367</td>
       <td>6.2</td>
       <td>17.0</td>
       <td>1.7</td>
+      <td>17.0</td>
     </tr>
     <tr>
       <th>246</th>
@@ -206,10 +224,23 @@
       <td>Fulham</td>
       <td>Forward</td>
       <td>12.830189</td>
-      <td>68.903591</td>
+      <td>68.415703</td>
       <td>5.3</td>
       <td>18.0</td>
       <td>1.6</td>
+      <td>18.0</td>
+    </tr>
+    <tr>
+      <th>417</th>
+      <td>Martial</td>
+      <td>Man Utd</td>
+      <td>Forward</td>
+      <td>8.505747</td>
+      <td>87.153832</td>
+      <td>8.7</td>
+      <td>19.0</td>
+      <td>1.5</td>
+      <td>22.0</td>
     </tr>
     <tr>
       <th>175</th>
@@ -217,21 +248,11 @@
       <td>Crystal Palace</td>
       <td>Forward</td>
       <td>10.000000</td>
-      <td>52.790349</td>
+      <td>53.793175</td>
       <td>5.5</td>
-      <td>19.0</td>
-      <td>2.5</td>
-    </tr>
-    <tr>
-      <th>183</th>
-      <td>Ayew</td>
-      <td>Crystal Palace</td>
-      <td>Forward</td>
-      <td>10.000000</td>
-      <td>56.495768</td>
-      <td>5.6</td>
       <td>20.0</td>
-      <td>2.2</td>
+      <td>2.5</td>
+      <td>19.0</td>
     </tr>
   </tbody>
 </table>
