--- a/templates/goalies.html
+++ b/templates/goalies.html
@@ -10,6 +10,7 @@
       <th>now_cost</th>
       <th>total_rank</th>
       <th>form</th>
+      <th>last_week_rank</th>
     </tr>
   </thead>
   <tbody>
@@ -19,10 +20,11 @@
       <td>Aston Villa</td>
       <td>Goalkeeper</td>
       <td>27.592593</td>
-      <td>136.492881</td>
+      <td>137.464835</td>
       <td>5.4</td>
       <td>1.0</td>
       <td>7.0</td>
+      <td>1.0</td>
     </tr>
     <tr>
       <th>124</th>
@@ -30,10 +32,11 @@
       <td>Burnley</td>
       <td>Goalkeeper</td>
       <td>22.500000</td>
-      <td>126.192848</td>
+      <td>124.756118</td>
       <td>5.6</td>
       <td>2.0</td>
       <td>3.7</td>
+      <td>2.0</td>
     </tr>
     <tr>
       <th>261</th>
@@ -41,10 +44,11 @@
       <td>Fulham</td>
       <td>Goalkeeper</td>
       <td>23.555556</td>
-      <td>101.489596</td>
+      <td>100.520803</td>
       <td>4.5</td>
       <td>3.0</td>
       <td>5.0</td>
+      <td>3.0</td>
     </tr>
     <tr>
       <th>646</th>
@@ -52,10 +56,23 @@
       <td>Wolves</td>
       <td>Goalkeeper</td>
       <td>19.056604</td>
-      <td>101.788912</td>
+      <td>101.973895</td>
       <td>5.3</td>
       <td>4.0</td>
       <td>5.3</td>
+      <td>4.0</td>
+    </tr>
+    <tr>
+      <th>382</th>
+      <td>Ederson</td>
+      <td>Man City</td>
+      <td>Goalkeeper</td>
+      <td>19.672131</td>
+      <td>122.912801</td>
+      <td>6.1</td>
+      <td>5.0</td>
+      <td>3.4</td>
+      <td>8.0</td>
     </tr>
     <tr>
       <th>589</th>
@@ -63,10 +80,11 @@
       <td>West Brom</td>
       <td>Goalkeeper</td>
       <td>20.444444</td>
-      <td>94.529643</td>
+      <td>93.886887</td>
       <td>4.5</td>
-      <td>5.0</td>
+      <td>6.0</td>
       <td>5.3</td>
+      <td>5.0</td>
     </tr>
     <tr>
       <th>543</th>
@@ -74,10 +92,11 @@
       <td>Spurs</td>
       <td>Goalkeeper</td>
       <td>19.642857</td>
-      <td>110.448243</td>
+      <td>109.960745</td>
       <td>5.6</td>
-      <td>6.0</td>
+      <td>7.0</td>
       <td>4.2</td>
+      <td>6.0</td>
     </tr>
     <tr>
       <th>323</th>
@@ -85,21 +104,11 @@
       <td>Leeds</td>
       <td>Goalkeeper</td>
       <td>22.173913</td>
-      <td>101.432259</td>
+      <td>101.500260</td>
       <td>4.6</td>
-      <td>7.0</td>
-      <td>3.8</td>
-    </tr>
-    <tr>
-      <th>382</th>
-      <td>Ederson</td>
-      <td>Man City</td>
-      <td>Goalkeeper</td>
-      <td>19.508197</td>
-      <td>121.838546</td>
-      <td>6.1</td>
       <td>8.0</td>
-      <td>3.2</td>
+      <td>3.8</td>
+      <td>7.0</td>
     </tr>
     <tr>
       <th>171</th>
@@ -107,10 +116,11 @@
       <td>Crystal Palace</td>
       <td>Goalkeeper</td>
       <td>20.208333</td>
-      <td>96.729889</td>
+      <td>97.208731</td>
       <td>4.8</td>
       <td>9.0</td>
       <td>3.7</td>
+      <td>9.0</td>
     </tr>
     <tr>
       <th>271</th>
@@ -118,21 +128,11 @@
       <td>Leicester</td>
       <td>Goalkeeper</td>
       <td>19.636364</td>
-      <td>108.441598</td>
+      <td>108.997725</td>
       <td>5.5</td>
       <td>10.0</td>
       <td>3.0</td>
-    </tr>
-    <tr>
-      <th>615</th>
-      <td>Fabianski</td>
-      <td>West Ham</td>
-      <td>Goalkeeper</td>
-      <td>19.800000</td>
-      <td>96.423535</td>
-      <td>5.0</td>
-      <td>11.0</td>
-      <td>3.2</td>
+      <td>10.0</td>
     </tr>
     <tr>
       <th>164</th>
@@ -140,10 +140,23 @@
       <td>Chelsea</td>
       <td>Goalkeeper</td>
       <td>19.215686</td>
-      <td>94.410522</td>
+      <td>97.397049</td>
       <td>5.1</td>
-      <td>12.0</td>
+      <td>11.0</td>
       <td>3.5</td>
+      <td>12.0</td>
+    </tr>
+    <tr>
+      <th>615</th>
+      <td>Fabianski</td>
+      <td>West Ham</td>
+      <td>Goalkeeper</td>
+      <td>19.800000</td>
+      <td>96.636397</td>
+      <td>5.0</td>
+      <td>12.0</td>
+      <td>3.2</td>
+      <td>11.0</td>
     </tr>
     <tr>
       <th>7</th>
@@ -151,10 +164,11 @@
       <td>Arsenal</td>
       <td>Goalkeeper</td>
       <td>19.800000</td>
-      <td>98.270414</td>
+      <td>98.701958</td>
       <td>5.0</td>
       <td>13.0</td>
       <td>2.2</td>
+      <td>13.0</td>
     </tr>
     <tr>
       <th>495</th>
@@ -162,10 +176,11 @@
       <td>Sheffield Utd</td>
       <td>Goalkeeper</td>
       <td>16.956522</td>
-      <td>77.605694</td>
+      <td>77.611824</td>
       <td>4.6</td>
       <td>14.0</td>
       <td>3.7</td>
+      <td>14.0</td>
     </tr>
     <tr>
       <th>208</th>
@@ -173,10 +188,11 @@
       <td>Everton</td>
       <td>Goalkeeper</td>
       <td>15.833333</td>
-      <td>74.927565</td>
+      <td>75.469168</td>
       <td>4.8</td>
       <td>15.0</td>
       <td>3.7</td>
+      <td>15.0</td>
     </tr>
     <tr>
       <th>406</th>
@@ -184,10 +200,11 @@
       <td>Man Utd</td>
       <td>Goalkeeper</td>
       <td>16.415094</td>
-      <td>87.091761</td>
+      <td>86.976706</td>
       <td>5.3</td>
       <td>16.0</td>
       <td>2.5</td>
+      <td>16.0</td>
     </tr>
     <tr>
       <th>511</th>
@@ -195,10 +212,11 @@
       <td>Southampton</td>
       <td>Goalkeeper</td>
       <td>18.000000</td>
-      <td>77.106453</td>
+      <td>77.277138</td>
       <td>4.5</td>
       <td>17.0</td>
       <td>0.7</td>
+      <td>17.0</td>
     </tr>
     <tr>
       <th>447</th>
@@ -206,10 +224,11 @@
       <td>Newcastle</td>
       <td>Goalkeeper</td>
       <td>16.000000</td>
-      <td>81.497040</td>
+      <td>82.708188</td>
       <td>5.0</td>
       <td>18.0</td>
       <td>1.0</td>
+      <td>18.0</td>
     </tr>
     <tr>
       <th>347</th>
@@ -217,10 +236,11 @@
       <td>Liverpool</td>
       <td>Goalkeeper</td>
       <td>13.559322</td>
-      <td>85.489917</td>
+      <td>85.076981</td>
       <td>5.9</td>
       <td>19.0</td>
       <td>1.5</td>
+      <td>19.0</td>
     </tr>
     <tr>
       <th>98</th>
@@ -228,10 +248,11 @@
       <td>Brighton</td>
       <td>Goalkeeper</td>
       <td>13.777778</td>
-      <td>59.605960</td>
+      <td>59.203031</td>
       <td>4.5</td>
       <td>20.0</td>
       <td>3.0</td>
+      <td>20.0</td>
     </tr>
   </tbody>
 </table>
