--- a/templates/midfielders.html
+++ b/templates/midfielders.html
@@ -10,6 +10,7 @@
       <th>now_cost</th>
       <th>total_rank</th>
       <th>form</th>
+      <th>last_week_rank</th>
     </tr>
   </thead>
   <tbody>
@@ -18,11 +19,12 @@
       <td>Fernandes</td>
       <td>Man Utd</td>
       <td>Midfielder</td>
-      <td>17.043478</td>
-      <td>212.248408</td>
+      <td>17.565217</td>
+      <td>213.144543</td>
       <td>11.5</td>
       <td>1.0</td>
-      <td>5.7</td>
+      <td>6.7</td>
+      <td>1.0</td>
     </tr>
     <tr>
       <th>349</th>
@@ -30,10 +32,11 @@
       <td>Liverpool</td>
       <td>Midfielder</td>
       <td>13.680000</td>
-      <td>235.291481</td>
+      <td>232.695198</td>
       <td>12.5</td>
       <td>2.0</td>
       <td>3.8</td>
+      <td>2.0</td>
     </tr>
     <tr>
       <th>550</th>
@@ -41,21 +44,23 @@
       <td>Spurs</td>
       <td>Midfielder</td>
       <td>18.020833</td>
-      <td>175.418876</td>
+      <td>175.607712</td>
       <td>9.6</td>
       <td>3.0</td>
       <td>4.7</td>
+      <td>3.0</td>
     </tr>
     <tr>
       <th>375</th>
       <td>Gündogan</td>
       <td>Man City</td>
       <td>Midfielder</td>
-      <td>21.290323</td>
-      <td>104.972942</td>
+      <td>21.451613</td>
+      <td>108.704986</td>
       <td>6.2</td>
       <td>4.0</td>
-      <td>5.1</td>
+      <td>5.2</td>
+      <td>4.0</td>
     </tr>
     <tr>
       <th>288</th>
@@ -63,10 +68,11 @@
       <td>Leicester</td>
       <td>Midfielder</td>
       <td>18.529412</td>
-      <td>118.935864</td>
+      <td>118.984540</td>
       <td>6.8</td>
       <td>5.0</td>
       <td>4.8</td>
+      <td>5.0</td>
     </tr>
     <tr>
       <th>156</th>
@@ -74,10 +80,11 @@
       <td>Chelsea</td>
       <td>Midfielder</td>
       <td>16.376812</td>
-      <td>118.056351</td>
+      <td>118.567283</td>
       <td>6.9</td>
       <td>6.0</td>
       <td>5.8</td>
+      <td>6.0</td>
     </tr>
     <tr>
       <th>518</th>
@@ -85,32 +92,23 @@
       <td>Southampton</td>
       <td>Midfielder</td>
       <td>19.830508</td>
-      <td>118.396523</td>
+      <td>117.988453</td>
       <td>5.9</td>
       <td>7.0</td>
       <td>4.0</td>
+      <td>7.0</td>
     </tr>
     <tr>
       <th>380</th>
       <td>Sterling</td>
       <td>Man City</td>
       <td>Midfielder</td>
-      <td>11.206897</td>
-      <td>186.061579</td>
+      <td>11.293103</td>
+      <td>183.966138</td>
       <td>11.6</td>
       <td>8.0</td>
-      <td>3.1</td>
-    </tr>
-    <tr>
-      <th>420</th>
-      <td>Rashford</td>
-      <td>Man Utd</td>
-      <td>Midfielder</td>
-      <td>13.750000</td>
-      <td>142.466266</td>
-      <td>9.6</td>
-      <td>9.0</td>
-      <td>4.2</td>
+      <td>3.2</td>
+      <td>8.0</td>
     </tr>
     <tr>
       <th>663</th>
@@ -118,10 +116,23 @@
       <td>Wolves</td>
       <td>Midfielder</td>
       <td>20.350877</td>
-      <td>108.665728</td>
+      <td>109.873270</td>
       <td>5.7</td>
-      <td>10.0</td>
+      <td>9.0</td>
       <td>3.3</td>
+      <td>10.0</td>
+    </tr>
+    <tr>
+      <th>420</th>
+      <td>Rashford</td>
+      <td>Man Utd</td>
+      <td>Midfielder</td>
+      <td>13.854167</td>
+      <td>138.589220</td>
+      <td>9.6</td>
+      <td>10.0</td>
+      <td>4.3</td>
+      <td>9.0</td>
     </tr>
     <tr>
       <th>656</th>
@@ -129,21 +140,11 @@
       <td>Wolves</td>
       <td>Midfielder</td>
       <td>17.450980</td>
-      <td>83.417277</td>
+      <td>85.051099</td>
       <td>5.1</td>
       <td>11.0</td>
       <td>5.5</td>
-    </tr>
-    <tr>
-      <th>3</th>
-      <td>Aubameyang</td>
-      <td>Arsenal</td>
-      <td>Midfielder</td>
-      <td>9.203540</td>
-      <td>126.389758</td>
-      <td>11.3</td>
-      <td>12.0</td>
-      <td>6.4</td>
+      <td>11.0</td>
     </tr>
     <tr>
       <th>282</th>
@@ -151,10 +152,23 @@
       <td>Leicester</td>
       <td>Midfielder</td>
       <td>16.875000</td>
-      <td>114.894284</td>
+      <td>114.040143</td>
       <td>6.4</td>
-      <td>13.0</td>
+      <td>12.0</td>
       <td>3.2</td>
+      <td>13.0</td>
+    </tr>
+    <tr>
+      <th>379</th>
+      <td>Mahrez</td>
+      <td>Man City</td>
+      <td>Midfielder</td>
+      <td>13.580247</td>
+      <td>115.977660</td>
+      <td>8.1</td>
+      <td>13.0</td>
+      <td>4.6</td>
+      <td>15.0</td>
     </tr>
     <tr>
       <th>285</th>
@@ -162,21 +176,23 @@
       <td>Leicester</td>
       <td>Midfielder</td>
       <td>16.527778</td>
-      <td>114.945262</td>
+      <td>113.867574</td>
       <td>7.2</td>
       <td>14.0</td>
       <td>3.2</td>
+      <td>14.0</td>
     </tr>
     <tr>
-      <th>379</th>
-      <td>Mahrez</td>
-      <td>Man City</td>
+      <th>3</th>
+      <td>Aubameyang</td>
+      <td>Arsenal</td>
       <td>Midfielder</td>
-      <td>13.456790</td>
-      <td>115.374465</td>
-      <td>8.1</td>
+      <td>9.203540</td>
+      <td>119.437649</td>
+      <td>11.3</td>
       <td>15.0</td>
-      <td>4.5</td>
+      <td>6.4</td>
+      <td>12.0</td>
     </tr>
     <tr>
       <th>331</th>
@@ -184,10 +200,11 @@
       <td>Leeds</td>
       <td>Midfielder</td>
       <td>17.090909</td>
-      <td>90.520644</td>
+      <td>89.212069</td>
       <td>5.5</td>
       <td>16.0</td>
       <td>4.2</td>
+      <td>16.0</td>
     </tr>
     <tr>
       <th>43</th>
@@ -195,10 +212,11 @@
       <td>Aston Villa</td>
       <td>Midfielder</td>
       <td>16.973684</td>
-      <td>130.604690</td>
+      <td>133.157784</td>
       <td>7.6</td>
       <td>17.0</td>
       <td>0.7</td>
+      <td>17.0</td>
     </tr>
     <tr>
       <th>313</th>
@@ -206,10 +224,11 @@
       <td>Leeds</td>
       <td>Midfielder</td>
       <td>18.518519</td>
-      <td>95.943708</td>
+      <td>94.804195</td>
       <td>5.4</td>
       <td>18.0</td>
       <td>2.3</td>
+      <td>18.0</td>
     </tr>
     <tr>
       <th>632</th>
@@ -217,10 +236,11 @@
       <td>West Ham</td>
       <td>Midfielder</td>
       <td>21.132075</td>
-      <td>86.503559</td>
+      <td>85.542238</td>
       <td>5.3</td>
       <td>19.0</td>
       <td>1.2</td>
+      <td>19.0</td>
     </tr>
     <tr>
       <th>388</th>
@@ -228,10 +248,11 @@
       <td>Man City</td>
       <td>Midfielder</td>
       <td>15.573770</td>
-      <td>90.505135</td>
+      <td>90.319033</td>
       <td>6.1</td>
       <td>20.0</td>
       <td>3.5</td>
+      <td>20.0</td>
     </tr>
   </tbody>
 </table>
